infrastructure/base/cilium-host-firewall/mail-server.cilium-clusterwide-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: mail-server-host-firewall
spec:
  nodeSelector:
    matchLabels:
      node-role.kubernetes.io/control-plane: "true"
  ingress:
    - fromCIDR:
        - 172.31.1.1/32
      toPorts:
        - ports:
            - port: "68"
              protocol: UDP
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "4240"
              protocol: TCP
            - port: "4244"
              protocol: TCP
            - port: "6443"
              protocol: TCP
            - port: "8472"
              protocol: UDP
            - port: "10250"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring-system
            app.kubernetes.io/name: alloy
      toPorts:
        - ports:
            - port: "2381"
              protocol: TCP
            - port: "9100"
              protocol: TCP
            - port: "9962"
              protocol: TCP
            - port: "9963"
              protocol: TCP
            - port: "10250"
              protocol: TCP
            - port: "10257"
              protocol: TCP
            - port: "10259"
              protocol: TCP
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "25"
              protocol: TCP
            - port: "80"
              protocol: TCP
            - port: "110"
              protocol: TCP
            - port: "143"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "465"
              protocol: TCP
            - port: "587"
              protocol: TCP
            - port: "993"
              protocol: TCP
            - port: "995"
              protocol: TCP
            - port: "4190"
              protocol: TCP
    - fromEntities:
        - world
      icmps:
        - fields:
            - family: IPv4
              type: 3
            - family: IPv4
              type: 11
            - family: IPv6
              type: 1
            - family: IPv6
              type: 2
            - family: IPv6
              type: 3
            - family: IPv6
              type: 4
            - family: IPv6
              type: 134
            - family: IPv6
              type: 135
            - family: IPv6
              type: 136
            - family: IPv6
              type: 137
